# FastAPI

./: .gitignore  pyproject.toml
src/app/api/v1/: __init__.py  hello.py
src/app/core/: config.py  security.py  setup.py
src/app/middleware/: client_cache.py
src/app/schemas/: health.py
