[tool.poetry]
name = "klub ai service"
version = "0.1.0"
description = "Repository for all the AI models"
authors = ["klub-jayanth <jayanth@klubworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
anyio = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
